added example to show minimum number of parameters passed into MCE

--- a/test_examples.ipynb
+++ b/test_examples.ipynb
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 367 ms, sys: 59 ms, total: 426 ms\n",
+      "CPU times: user 380 ms, sys: 36.7 ms, total: 417 ms\n",
       "Wall time: 1min\n"
      ]
     }
@@ -139,15 +139,15 @@
     "\n",
     "\n",
     "mce_args = {\n",
-    "    'cluster_job_name': 'save_a_silly_string_', # no spaces as it will be part of directory name\n",
-    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
-    "    'ram_limit_in_GB': 20.0,\n",
-    "    'wait_time_in_seconds': 1,\n",
     "    'input_file_names': sorted([os.path.abspath('fake_data/' + file_name) \n",
     "        for file_name in os.listdir('fake_data')]), # gets absolute file paths\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # absolute path preferred, directory has to already exist\n",
     "    'function_to_process': save_a_string,\n",
-    "    'function_kwargs_dict': {'string_saved_to_file': 'pee-a-boo!'} # function arguments here\n",
+    "    'function_kwargs_dict': {'string_saved_to_file': 'pee-a-boo!'}, # function arguments here\n",
+    "    'cluster_job_name': 'save_a_silly_string_', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'wait_time_in_seconds': 1\n",
     "    }\n",
     "\n",
     "mce0 = MultipleClusterEngine(**mce_args)\n",
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 328 ms, sys: 68.4 ms, total: 397 ms\n",
+      "CPU times: user 338 ms, sys: 60.3 ms, total: 398 ms\n",
       "Wall time: 1min\n"
      ]
     }
@@ -264,15 +264,15 @@
     "    \n",
     "\n",
     "mce_args = {\n",
-    "    'cluster_job_name': 'error_one_', # no spaces as it will be part of directory name\n",
-    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
-    "    'ram_limit_in_GB': 20.0,\n",
-    "    'wait_time_in_seconds': 1,\n",
     "    'input_file_names': sorted([os.path.abspath('fake_data/' + file_name)\n",
     "        for file_name in os.listdir('fake_data')]), # gets absolute file paths    \n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': error_func1,\n",
-    "    'function_kwargs_dict': {} # error_func1() takes no additional arguments    \n",
+    "    'function_kwargs_dict': {}, # error_func1() takes no additional arguments\n",
+    "    'cluster_job_name': 'error_one_', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'wait_time_in_seconds': 1\n",
     "    }\n",
     "\n",
     "mce1 = MultipleClusterEngine(**mce_args)\n",
@@ -350,7 +350,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 336 ms, sys: 55.4 ms, total: 391 ms\n",
+      "CPU times: user 354 ms, sys: 45.4 ms, total: 399 ms\n",
       "Wall time: 1min\n"
      ]
     }
@@ -372,15 +372,15 @@
     "    '1' + 2\n",
     "    \n",
     "mce_args = {\n",
-    "    'cluster_job_name': 'error_two_', # no spaces as it will be part of directory name\n",
-    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
-    "    'ram_limit_in_GB': 20.0,\n",
-    "    'wait_time_in_seconds': 1,\n",
     "    'input_file_names': sorted([os.path.abspath('fake_data/' + file_name) \n",
     "        for file_name in os.listdir('fake_data')]), # gets absolute file paths\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': error_func2,\n",
-    "    'function_kwargs_dict': {} # error_func2() takes no additional arguments    \n",
+    "    'function_kwargs_dict': {}, # error_func2() takes no additional arguments    \n",
+    "    'cluster_job_name': 'error_two_', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'wait_time_in_seconds': 1\n",
     "    }\n",
     "\n",
     "mce2 = MultipleClusterEngine(**mce_args)\n",
@@ -458,7 +458,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 379 ms, sys: 97.9 ms, total: 477 ms\n",
+      "CPU times: user 354 ms, sys: 125 ms, total: 478 ms\n",
       "Wall time: 2min 23s\n"
      ]
     }
@@ -489,15 +489,15 @@
     "        \n",
     "    \n",
     "mce_args = {\n",
-    "    'cluster_job_name': 'exceed_memory_', # no spaces as it will be part of directory name\n",
-    "    'n_cpus_list': [4, 3, 2, 1, 1, 1], # 1st cluster is always the largest or equal to the other clusters\n",
-    "    'ram_limit_in_GB': 20.0,\n",
-    "    'wait_time_in_seconds': 1,\n",
     "    'input_file_names': sorted([os.path.abspath('fake_data/' + file_name) \n",
     "        for file_name in os.listdir('fake_data')]), # gets absolute file paths\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': exceed_memory_limit,\n",
-    "    'function_kwargs_dict': {} # exceed_memory_limit()takes no additional arguments    \n",
+    "    'function_kwargs_dict': {}, # exceed_memory_limit()takes no additional arguments\n",
+    "    'cluster_job_name': 'exceed_memory_', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2, 1, 1, 1], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'wait_time_in_seconds': 1\n",
     "    }\n",
     "\n",
     "mce3 = MultipleClusterEngine(**mce_args)\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -570,33 +570,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|██████    | 6/10 [00:06<00:04,  1.01s/it]"
-     ]
-    },
-    {
-     "ename": "Exception",
-     "evalue": "All clusters have been killed prematurely",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    315\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_cluster_output_dir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    316\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 317\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    318\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mrun_clusters\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    269\u001b[0m                 \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_time_in_seconds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    270\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprofile_memory_for_all_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 271\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill_cluster_if_ram_limit_exceeded\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    272\u001b[0m                 \u001b[0mjth_cluster\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_indexes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    273\u001b[0m                 if (not self.async_results_dict[jth_cluster][-1:]\n",
-      "\u001b[0;32m~/multiple-cluster-engine-in-python3/multiple_cluster_engine.py\u001b[0m in \u001b[0;36mkill_cluster_if_ram_limit_exceeded\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    216\u001b[0m             self.logger_status.info((\"{}: All clusters have been killed prematurely \"\n\u001b[1;32m    217\u001b[0m                 \"(probably due to exceeding RAM limit)\").format(datetime.now()))\n\u001b[0;32m--> 218\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'All clusters have been killed prematurely'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcheck_if_function_in_cluster_failed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcluster_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: All clusters have been killed prematurely"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "from multiple_cluster_engine import MultipleClusterEngine\n",
@@ -622,15 +600,15 @@
     "        \n",
     "    \n",
     "mce_args = {\n",
-    "    'cluster_job_name': 'exceed_memory_all_', # no spaces as it will be part of directory name\n",
-    "    'n_cpus_list': [4, 3, 2, 1, 1, 1], # 1st cluster is always the largest or equal to the other clusters\n",
-    "    'ram_limit_in_GB': 20.0,\n",
-    "    'wait_time_in_seconds': 1,\n",
     "    'input_file_names': sorted([os.path.abspath('fake_data/' + file_name) \n",
     "        for file_name in os.listdir('fake_data')]), # gets absolute file paths\n",
     "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
     "    'function_to_process': exceed_memory_limit_all,\n",
-    "    'function_kwargs_dict': {} # exceed_memory_limit_all() takes no additional arguments    \n",
+    "    'function_kwargs_dict': {}, # exceed_memory_limit_all() takes no additional arguments\n",
+    "    'cluster_job_name': 'exceed_memory_all_', # no spaces as it will be part of directory name\n",
+    "    'n_cpus_list': [4, 3, 2, 1, 1, 1], # 1st cluster is always the largest or equal to the other clusters\n",
+    "    'ram_limit_in_GB': 20.0,\n",
+    "    'wait_time_in_seconds': 1\n",
     "    }\n",
     "\n",
     "mce4 = MultipleClusterEngine(**mce_args)\n",
@@ -639,20 +617,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list, {})"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mce4.async_results_dict # when a function fails due to exceeding memory limit, its async_result history is removed"
    ]
@@ -703,8 +670,8 @@
      "output_type": "stream",
      "text": [
       "mkdir: cannot create directory ‘fake_data’: File exists\n",
-      "CPU times: user 3.02 s, sys: 112 ms, total: 3.13 s\n",
-      "Wall time: 3.24 s\n"
+      "CPU times: user 2.94 s, sys: 83.9 ms, total: 3.02 s\n",
+      "Wall time: 3.12 s\n"
      ]
     }
    ],
@@ -787,7 +754,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 354 ms, sys: 23.1 ms, total: 377 ms\n",
+      "CPU times: user 353 ms, sys: 28.1 ms, total: 381 ms\n",
       "Wall time: 59.5 s\n"
      ]
     }
@@ -797,7 +764,10 @@
     "from multiple_cluster_engine import MultipleClusterEngine\n",
     "import os\n",
     "\n",
-    "mce_args = {\n",
+    "\n",
+    "# You have the choice to include all MCE arguments or just the most important ones.\n",
+    "# I recommend that you put all of them to gain full control of the engine and not use the default parameters.\n",
+    "all_mce_args = {\n",
     "    'cluster_job_name': 'get_user_invoice_total_', # no spaces as it will be part of directory name\n",
     "    'n_cpus_list': [4, 3, 2], # 1st cluster is always the largest or equal to the other clusters\n",
     "    'ram_limit_in_GB': 20.0,\n",
@@ -809,7 +779,16 @@
     "    'function_kwargs_dict': {} # user_invoice_total() takes no additional arguments    \n",
     "    }\n",
     "\n",
-    "mce5 = MultipleClusterEngine(**mce_args)\n",
+    "\"\"\"\n",
+    "minimum_required_mce_args = {\n",
+    "    'input_file_names': sorted([os.path.abspath('fake_data/' + file_name) \n",
+    "        for file_name in os.listdir('fake_data')]), # gets absolute file paths\n",
+    "    'output_parent_dir': '/home/ubuntu/cluster_results', # use absolute path since it's safer, has to already exist\n",
+    "    'function_to_process': user_invoice_total,\n",
+    "    'function_kwargs_dict': {} # user_invoice_total() takes no additional arguments    \n",
+    "}\n",
+    "\"\"\"\n",
+    "mce5 = MultipleClusterEngine(**all_mce_args)\n",
     "mce5.main()"
    ]
   },
@@ -898,8 +877,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 359 ms, sys: 8 ms, total: 367 ms\n",
-      "Wall time: 468 ms\n"
+      "CPU times: user 361 ms, sys: 4.13 ms, total: 365 ms\n",
+      "Wall time: 467 ms\n"
      ]
     }
    ],
@@ -932,21 +911,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MCE results match manual extraction for file: 0.tmp: True\n",
-      "MCE results match manual extraction for file: 1.tmp: True\n",
-      "MCE results match manual extraction for file: 2.tmp: True\n",
-      "MCE results match manual extraction for file: 3.tmp: True\n",
-      "MCE results match manual extraction for file: 4.tmp: True\n",
-      "MCE results match manual extraction for file: 5.tmp: True\n",
-      "MCE results match manual extraction for file: 6.tmp: True\n",
-      "MCE results match manual extraction for file: 7.tmp: True\n",
-      "MCE results match manual extraction for file: 8.tmp: True\n",
-      "MCE results match manual extraction for file: 9.tmp: True\n",
-      "CPU times: user 249 ms, sys: 40.4 ms, total: 290 ms\n",
-      "Wall time: 287 ms\n"
+     "ename": "ValueError",
+     "evalue": "No objects to concatenate",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, join_axes, ignore_index, keys, levels, names, verify_integrity, copy)\u001b[0m\n\u001b[1;32m    210\u001b[0m                        \u001b[0mkeys\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m                        \u001b[0mverify_integrity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 212\u001b[0;31m                        copy=copy)\n\u001b[0m\u001b[1;32m    213\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, objs, axis, join, join_axes, keys, levels, names, ignore_index, verify_integrity, copy)\u001b[0m\n\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 245\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'No objects to concatenate'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    246\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mkeys\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: No objects to concatenate"
      ]
     }
    ],
