added example for UDF 5 for minimum amount of parameters passed into MCE

--- a/test_examples.ipynb
+++ b/test_examples.ipynb
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,9 +780,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0/10 [00:00<?, ?it/s]\u001b[A\n",
+      " 10%|█         | 1/10 [00:01<00:09,  1.01s/it]\u001b[A\n",
+      "Exception in thread Thread-29:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/site-packages/tqdm/_tqdm.py\", line 144, in run\n",
+      "    for instance in self.tqdm_cls._instances:\n",
+      "  File \"/home/ubuntu/anaconda2/envs/py36/lib/python3.6/_weakrefset.py\", line 60, in __iter__\n",
+      "    for itemref in self.data:\n",
+      "RuntimeError: Set changed size during iteration\n",
+      "\n",
+      "100%|██████████| 10/10 [00:10<00:00,  1.01s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 294 ms, sys: 34.7 ms, total: 329 ms\n",
+      "Wall time: 59.4 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "from multiple_cluster_engine import MultipleClusterEngine\n",
@@ -818,11 +847,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {0: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             1: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>],\n",
+       "             2: [<AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>,\n",
+       "              <AsyncMapResult: <lambda>:finished>]})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mce5.async_results_dict"
    ]
@@ -836,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,11 +921,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 373 ms, sys: 11.1 ms, total: 384 ms\n",
+      "Wall time: 486 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Basically, I put print statements in my UDF until the function seems to work.\n",
@@ -901,9 +960,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCE results match manual extraction for file: 0.tmp: True\n",
+      "MCE results match manual extraction for file: 1.tmp: True\n",
+      "MCE results match manual extraction for file: 2.tmp: True\n",
+      "MCE results match manual extraction for file: 3.tmp: True\n",
+      "MCE results match manual extraction for file: 4.tmp: True\n",
+      "MCE results match manual extraction for file: 5.tmp: True\n",
+      "MCE results match manual extraction for file: 6.tmp: True\n",
+      "MCE results match manual extraction for file: 7.tmp: True\n",
+      "MCE results match manual extraction for file: 8.tmp: True\n",
+      "MCE results match manual extraction for file: 9.tmp: True\n",
+      "CPU times: user 258 ms, sys: 24.7 ms, total: 283 ms\n",
+      "Wall time: 280 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# on raw, unconcatenated files\n",
@@ -929,9 +1007,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCE results match manual extraction for file: 0.tmp: True\n",
+      "MCE results match manual extraction for file: 1.tmp: True\n",
+      "MCE results match manual extraction for file: 2.tmp: True\n",
+      "MCE results match manual extraction for file: 3.tmp: True\n",
+      "MCE results match manual extraction for file: 4.tmp: True\n",
+      "MCE results match manual extraction for file: 5.tmp: True\n",
+      "MCE results match manual extraction for file: 6.tmp: True\n",
+      "MCE results match manual extraction for file: 7.tmp: True\n",
+      "MCE results match manual extraction for file: 8.tmp: True\n",
+      "MCE results match manual extraction for file: 9.tmp: True\n"
+     ]
+    }
+   ],
    "source": [
     "# OPTIONAL: on concatenated files, need MCE object\n",
     "for file_name in sorted(mce5.input_file_names):\n",
